--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,12 @@
         "psr-4": {
             "Otus\\" : "src/Otus"
         }
+    },
+    "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/IKMiuq/composer_test"
     }
+  ],
+
 }
